--- a/my.css
+++ b/my.css
@@ -46,6 +46,21 @@ bottom:0;
 color:black;
 
 }
+.title{
+color:#ffffff;
+font-family: Arial, Helvetica, sans-serif;
+background-color:#00ff7f;
+
+
+  }
+  .push{
+  
+  height:40px;}
+#searchName{
+width:600px;
+height:40px;
+
+}
 #bodydiv{
 height: 100%; margin: 0; padding: 0;height: auto; min-height: 100%; text-align:center;
 
