--- a/my.css
+++ b/my.css
@@ -1,6 +1,6 @@
 #container{
 margin:0;
-position:relative;width:60px;height:60px;background-color:white;margin-left:20px;
+position:relative;width:60px;height:60px;background-color:black;margin-left:20px;
 margin-top:20px;
 
 
@@ -47,18 +47,27 @@ color:black;
 
 }
 .title{
-color:#ffffff;
+width:400px:
+height:60px;
+color:#00a1f1;
 font-family: Arial, Helvetica, sans-serif;
-background-color:#00ff7f;
+background-color:#000000;
+font-size:50px;
+
 
 
   }
   .push{
-  
-  height:40px;}
+  color :black;
+  height:50px;
+  font-size:30px;}
 #searchName{
 width:600px;
-height:40px;
+height:50px;
+color:black;
+font-size:30px;
+
+
 
 }
 #bodydiv{
@@ -68,13 +77,21 @@ height: 100%; margin: 0; padding: 0;height: auto; min-height: 100%; text-align:c
 }
 #footer{
 
-position: fixed ;
-bottom: 0px;
-
+text-align:center;
+color:#00a1f1;
 
 
 
 
 
 }
+#main{
+color:white ;
+
+}
+body{
+background-color:black;
+
+}
+
 
